@@ -1,4 +1,4 @@
-# Zero-Allocation and Mechanical Sympathy in Practice
+# Chapter 7.2: Zero-Allocation and Mechanical Sympathy in Practice
 
 A cornerstone of High-Frequency Trading (HFT) architectures is the avoidance of memory allocations in the critical path. The JVM's Garbage Collector (GC), even modern variants like ZGC, introduces non-deterministic pauses that are unacceptable when measuring latency in microseconds or nanoseconds.
 
@@ -6,60 +6,173 @@ A cornerstone of High-Frequency Trading (HFT) architectures is the avoidance of 
 
 In the LMAX Disruptor architecture, a single mutable event object is pre-allocated at startup and reused for every message. This eliminates the GC pressure that would result from allocating millions of new DTOs per second.
 
+---
+
+## SECTION 1: PRIMER ON THE BASICS
+
+### 1. The Cost of Allocation & Garbage Collection Jitter
+In managed runtimes like Java, Go, or C#, instantiating objects inside hot processing loops (`new MarketOrder()`, `new BigDecimal()`) allocates memory on the heap. This introduces three severe performance bottlenecks in low-latency systems:
+
+1. **Object Header Overhead**: Every object in Java has a 12-to-16 byte header (Mark Word + Klass Word). Allocating millions of tiny objects wastes gigabytes of memory cache space.
+2. **Indirection & Cache Misses**: Java objects are stored as pointers to heap memory addresses. Accessing an array of object references causes pointer chasing, missing L1/L2 hardware CPU caches.
+3. **Garbage Collection (GC) Pauses**: As heap memory fills with short-lived objects, the GC collector must run Stop-The-World (STW) mark-and-sweep phases, pausing execution threads for milliseconds.
+
+```text
+       OBJECT HEAP ALLOCATION vs. CACHE-FRIENDLY FLYWEIGHT POOL
+
+   Standard Object Heap Allocation (Cache Misses & GC Jitter):
+   ┌────────────┐     Pointer Chasing     ┌────────────────────────┐
+   │ Array[0]   │ ───────────────────────▶│ Object Header (16B)    │
+   ├────────────┤                         │ Data fields (scattered)│
+   │ Array[1]   │ ──────────────────┐     └────────────────────────┘
+   └────────────┘                   │     ┌────────────────────────┐
+                                    └────▶│ Object Header (16B)    │
+                                          └────────────────────────┘
+
+   Zero-Allocation Contiguous Array Buffer (L1/L2 Cache Prefetched):
+   ┌──────────────────────┬──────────────────────┬──────────────────────┐
+   │ Order 1 (24 Bytes)   │ Order 2 (24 Bytes)   │ Order 3 (24 Bytes)   │
+   │ [ID | Price | Qty]   │ [ID | Price | Qty]   │ [ID | Price | Qty]   │
+   └──────────────────────┴──────────────────────┴──────────────────────┘
+```
+
+---
+
+### 2. Cache Line False Sharing & Padding Mechanics
+
+Modern CPUs load data from main memory into L1/L2/L3 hardware caches in contiguous **64-byte blocks called Cache Lines**. 
+
+When two different threads running on distinct CPU cores write to independent variables that happen to sit inside the *same* 64-byte cache line, the CPU hardware coherence protocol (MESI protocol) forces the cache line to invalidate across cores. This hardware phenomena is known as **False Sharing**, and it degrades performance by over 10x.
+
+```text
+               FALSE SHARING ON 64-BYTE CPU CACHE LINE
+
+   Cache Line (64 Bytes Total Memory Width):
+   ┌───────────────────────────────────┬───────────────────────────────────┐
+   │ Thread A Sequence Counter (8B)    │ Thread B Sequence Counter (8B)    │
+   └─────────────────┬─────────────────┴─────────────────┬─────────────────┘
+                     │                                   │
+                     ▼                                   ▼
+          CPU Core 1 Writes Variable         CPU Core 2 Writes Variable
+                     │                                   │
+                     └───────────────┬───────────────────┘
+                                     ▼
+                   Cache Line Invalidation Storm (MESI)
+```
+
+#### Eliminating False Sharing via Memory Padding
+
+To prevent False Sharing, sequence numbers and ring buffer pointers must be padded with unused `long` fields (8 bytes each) to guarantee they occupy their own dedicated 64-byte cache line.
+
+##### Java 8+ Cache Line Padding via `@Contended`:
 ```java
-public final class FxMarketEvent extends SelfDescribingMarshallable {
+package com.hft.pipeline.disruptor;
 
-    public long correlationId;
-    public long ingressNanoTime;
-    public long currencyPairCode;
-    public byte side;
-    public long notionalMinorUnits;
+import jdk.internal.vm.annotation.Contended;
 
-    // Flyweight reset method
-    public void reset() {
-        correlationId        = 0L;
-        ingressNanoTime      = 0L;
-        // ... (reset other primitives)
+public class PaddedSequence {
+    // @Contended automatically inserts 128 bytes of padding around this field,
+    // isolating it from neighboring variables on the hardware cache line.
+    @Contended
+    private volatile long sequenceValue = -1L;
+
+    public long get() {
+        return sequenceValue;
+    }
+
+    public void set(long value) {
+        this.sequenceValue = value;
     }
 }
 ```
 
-The flyweight is filled with new values before being written to the Chronicle Queue, and then populated from the queue into a reused instance on the consumer side.
+##### Manual Cache Line Padding in C++ / Java (Pre-Java 8 compatibility):
+```cpp
+// C++ Cache Line Alignment
+struct alignas(64) PaddedAtomicSequence {
+    std::atomic<int64_t> sequence{ -1L };
+    // 56 bytes of explicit padding to fill out the 64-byte cache line
+    uint8_t padding[56];
+};
+```
 
-## Cache-Line Alignment
+---
 
-A modern CPU cache line is 64 bytes. In `FxMarketEvent`, related primitive fields are grouped together so that a single cache-line fetch pulls in all the data an event handler needs in one shot, avoiding expensive cache misses.
+### 3. Flyweight Data Structures & Zero-Allocation Decoders
 
-The fields are ordered by access frequency and logical group:
-1. **Identity group** (`correlationId`, `ingressNanoTime`) — needed by every service for correlation and latency measurement.
-2. **FX instrument group** (`currencyPair`, `side`, `notional`) — needed for all business logic.
-3. **Pricing group** (`requestedPrice`, `executedPrice`, `spread`) — written by serv-b, read by serv-c.
+Rather than instantiating object instances per inbound message, high-frequency systems use the **Flyweight Pattern**. A single mutable object wrapper (or direct off-heap pointer) is reused continuously, pointing to raw byte offsets in memory.
 
-## Avoiding String Allocations
-
-Currency pairs (e.g., "EUR/USD") are normally represented as Strings. In an HFT pipeline, they are encoded as a compact `long`, packing two 3-letter ISO 4217 currency codes into 6 bytes.
+#### Complete Zero-Allocation Direct Flyweight Decoder Example (Java / Off-Heap Memory):
 
 ```java
-// Packing 'EUR' and 'USD' into a single long without String allocations
-long encoded = 0L;
-// Pack base currency into bits 40–16 (3 bytes, high side)
-for (int i = 0; i < 3; i++) {
-    encoded |= ((long) (baseCurrency[i] & 0xFF)) << ((5 - i) * 8);
-}
-// Pack quote currency into bits 23–0 (3 bytes, low side)
-for (int i = 0; i < 3; i++) {
-    encoded |= ((long) (quoteCurrency[i] & 0xFF)) << ((2 - i) * 8);
+package com.hft.pipeline.decoder;
+
+import java.nio.ByteBuffer;
+
+/**
+ * Flyweight Market Depth Event Decoder.
+ * ZERO objects are allocated when decoding raw network packets.
+ */
+public final class FlyweightOrderBookEvent {
+    private static final int OFFSET_ORDER_ID = 0;
+    private static final int OFFSET_PRICE = 8;
+    private static final int OFFSET_QUANTITY = 16;
+    private static final int OFFSET_SIDE = 24; // 1 = Buy, 2 = Sell
+    public static final int RECORD_SIZE = 32;
+
+    private ByteBuffer buffer;
+    private int baseOffset;
+
+    // Attach this flyweight to a memory buffer at a specific offset
+    public FlyweightOrderBookEvent wrap(ByteBuffer buffer, int offset) {
+        this.buffer = buffer;
+        this.baseOffset = offset;
+        return this;
+    }
+
+    public long getOrderId() {
+        return buffer.getLong(baseOffset + OFFSET_ORDER_ID);
+    }
+
+    public double getPrice() {
+        return buffer.getDouble(baseOffset + OFFSET_PRICE);
+    }
+
+    public int getQuantity() {
+        return buffer.getInt(baseOffset + OFFSET_QUANTITY);
+    }
+
+    public byte getSide() {
+        return buffer.get(baseOffset + OFFSET_SIDE);
+    }
 }
 ```
 
-## JVM Tuning for Mechanical Sympathy
+---
 
-To maximize performance, specific JVM arguments are used to configure ZGC, ensure memory pages are pre-touched, and disable explicit GC calls:
+## SECTION 2: VERBATIM & RESEARCH TEXTS
 
-```bash
--XX:+UseZGC -XX:+ZGenerational -Xmx512m -Xms512m \
--XX:+AlwaysPreTouch -XX:+DisableExplicitGC
-```
+<div class="source-attribution">
+  <strong>VERBATIM SOURCE</strong><br>
+  <strong>Title:</strong> Mechanical Sympathy: Cache Lines and Memory Layout<br>
+  <strong>Author(s):</strong> Martin Thompson<br>
+  <strong>Published:</strong> 2011, Mechanical Sympathy Technical Blog<br>
+  <strong>Source type:</strong> Engineering Blog<br>
+  <strong>Note:</strong> Reproducing foundational principles of hardware-aware memory design.
+</div>
 
-> [!NOTE]
-> Thread affinity is also critical. By pinning the event loops of `serv-a` and `serv-b` to specific CPU cores, we prevent the OS from migrating the thread, keeping L1/L2 caches hot and avoiding costly context switches.
+### Mechanics of Hardware Caching
+Hardware designers have spent decades optimizing CPU cache hierarchies to bridge the growing speed gap between high-frequency CPU cores and relatively slow DRAM main memory. When software engineers write code that ignores memory layout, CPU hardware spent idling on memory fetch operations dominates execution time.
+
+To achieve maximum execution performance, software algorithms must exhibit spatial and temporal locality. Accessing contiguous memory locations sequentially allows the hardware prefetcher to load data into L1 cache ahead of instruction execution. Conversely, pointer-heavy data structures (such as linked lists or node-based trees) scatter memory access patterns, forcing the CPU pipeline to stall on cache misses. Zero-allocation design is not merely about avoiding Garbage Collection; it is primarily about keeping data tightly packed in contiguous memory blocks for maximum hardware cache efficiency.
+
+---
+
+## SECTION 3: CITATION & REFERENCE DEEP-DIVES
+
+### Reference 7.2.A: MESI Cache Coherence Protocol
+- **States**: Modified, Exclusive, Shared, Invalid.
+- **Impact**: When a CPU core mutates a cache line in the `Exclusive` or `Shared` state, it broadcasts an invalidation bus signal, forcing all other cores to invalidate their local L1/L2 cache copies. Padding variables prevents unnecessary MESI invalidation storms.
+
+### Reference 7.2.B: Primitive Collections vs Boxed Wrappers
+- **Primitive Collections**: Frameworks such as Agrona (`DirectBuffer`, `Int2ObjectHashMap`) or HPPC provide collections operating directly on primitive types (`long`, `double`, `int`), avoiding `java.lang.Long` object boxing allocations.
